--- a/whats_fresh/whats_fresh_api/templates/story.html
+++ b/whats_fresh/whats_fresh_api/templates/story.html
@@ -193,17 +193,15 @@
             headers: { 'X-CSRFToken': '{{ csrf_token }}' },
             success: function(data)
             {
-                // if (data.constructor === "test".constructor) {      // checks if the data is a string
-                //     $("#image-dialog").html(data);
-                //     return
-                // }
+                if (data.constructor === "test".constructor) {      // checks if the data is a string
+                    $("#image-dialog").html(data);
+                    return
+                }
 
                 alert("New Image saved.");
                 $("#image-dialog").dialog('close');
-                // var imgName = data.name;
-                // var imgId = data.id;
-                console.log(data.name)
-
+                var imgName = data.name;
+                var imgId = data.id;
 
                 $('#inline_image').append($('<div class="popup_image">')
                 .append($('<select disabled class="image_select">')
@@ -241,10 +239,6 @@
                 $("#video-dialog").dialog('close');
                 var vidName = data.name;
                 var vidId = data.id;
-
-                console.log(data.name);
-
-                console.log(data);
 
                 $('#inline_video').append($('<div class="popup_video">')
                 .append($('<select disabled class="video_select">')
