--- a/whats_fresh/whats_fresh_api/templates/story.html
+++ b/whats_fresh/whats_fresh_api/templates/story.html
@@ -206,7 +206,7 @@
                 $('#inline_image').append($('<div class="popup_image">')
                 .append($('<select disabled class="image_select">')
                 .append($("<option>").attr("value", imgId)
-                .text(imgName))).append('<a href="#" onclick="deleteVideo(this);return false;">\n<img class="delete" src="{% static 'delete.png' %}" /></a>'));
+                .text(imgName))).append('<a href="#" onclick="deleteImage(this);return false;">\n<img class="delete" src="{% static 'delete.png' %}" /></a>'));
 
                 $( ".image_select" ).append($("<option>").attr("value", imgId).text(imgName));
                 $( ".no_image" ).hide();
@@ -298,7 +298,7 @@
     function deleteImage(element)
     {
         $( element ).parent().css("display", "none");
-        if ($( ".image:visible" ).length === 0 && $( ".popup_image:visible" ).length === 0) {
+        if ($( ".image:visible" ).length === 0 && $( ".popup_image:visible" ).length === 0 ) {
             $( ".no_image" ).show();
         };
     }
