noqa removed other structural changes

--- a/whats_fresh/whats_fresh_api/templates/preparation_ajax.html
+++ b/whats_fresh/whats_fresh_api/templates/preparation_ajax.html
@@ -1,9 +1,4 @@
-<!-- {% extends "preparation.html" %}
-
-{% block title %}
-<h2 class='light'>{{ title }}</h2>
-<h4 class='light accent'>{{ message }}</h4>
-{% endblock title %} -->
+ <!-- {% extends "preparation.html" %} -->
 
 <!-- {% block content %} -->
 <form action="{{ post_url }}" method="post" id="popup-form">
