extends, block, footer removed scrolling for error

--- a/whats_fresh/whats_fresh_api/templates/preparation_ajax.html
+++ b/whats_fresh/whats_fresh_api/templates/preparation_ajax.html
@@ -1,6 +1,3 @@
- <!-- {% extends "preparation.html" %} -->
-
-<!-- {% block content %} -->
 <form action="{{ post_url }}" method="post" id="popup-form">
 
     <div class="error">
@@ -27,4 +24,5 @@
         <button>Save</button>
     </div>
 </form>
-<!-- {% endblock content %} -->
+<script>  //This should not be required
+</script>
