--- a/whats_fresh/whats_fresh_api/templates/vendor.html
+++ b/whats_fresh/whats_fresh_api/templates/vendor.html
@@ -295,7 +295,7 @@ $('#map').locationpicker({
         {
             if (data.constructor === "test".constructor) {     // checks if the data is a string
                 $('html, body').animate({
-                    scrollTop: $("#dialog-form").offset().top
+                    scrollTop: $("#product_error").offset().top
                 }, 500);
                 $("#dialog-form").html(data);
                 return
