extends, block tags dropped

--- a/whats_fresh/whats_fresh_api/templates/image_ajax.html
+++ b/whats_fresh/whats_fresh_api/templates/image_ajax.html
@@ -1,6 +1,3 @@
-<!-- {% extends "base.html" %}
-
-{% block content %} -->
 <form action="{{ post_url }}" method="post" enctype="multipart/form-data" id="image-form" name="newImage">
 
     <div class="error">
@@ -25,7 +22,6 @@
             <img src="{{ image_form.instance.image.url }}" class="image_embed" />
         {% endif %}
         <p class="field_text">Image*:</p>
-        <!-- <input id="id_image" name="image" type="file" /> -->
         {{ image_form.image }}
         <p class="field_text">Name*:</p>
         {{ image_form.name }}
@@ -34,4 +30,5 @@
         <button>Save</button>
     </div>
 </form>
-<!-- {% endblock content %} -->
+<script>  //This should not be required
+</script>
