--- a/whats_fresh/whats_fresh_api/templates/video_ajax.html
+++ b/whats_fresh/whats_fresh_api/templates/video_ajax.html
@@ -1,6 +1,3 @@
-<!-- {% extends "base.html" %}
-
-{% block content %} -->
 <form action="{{ post_url }}" method="post" id="video-form">
 
     <div class="error">
@@ -30,4 +27,5 @@
         <button>Save</button>
     </div>
 </form>
-<!-- {% endblock content %} -->
+<script>  //This should not be required
+</script>
