--- a/whats_fresh/whats_fresh_api/templates/preparation_ajax.html
+++ b/whats_fresh/whats_fresh_api/templates/preparation_ajax.html
@@ -24,5 +24,5 @@
         <button>Save</button>
     </div>
 </form>
-<script>  //This should not be required
+<script>  // To prevent .html() from stripping top level tag
 </script>
