--- a/whats_fresh/whats_fresh_api/templates/product.html
+++ b/whats_fresh/whats_fresh_api/templates/product.html
@@ -79,8 +79,8 @@
     <div id="inline_preparation">  <!-- Div used if a new inline preparation submitted -->
     </div>
 
-    <button type="submit" onclick="return popitup('/entry/products/new/preparations/new/')">Add New Preparation</button>
-    <div id="dialog-form"></div>
+    <button type="submit" onclick="return createPopup('/entry/products/new/preparations/new/')">Add New Preparation</button>
+    <div id="popup"></div>
 
     <input class='preparation' name="preparation_ids" type="hidden" />
     <div class="buttons">
@@ -108,21 +108,21 @@
 
     number_of_preparations = 0;
 
-    function popitup(url) {
+    function createPopup(url) {
       $.ajax({
         type: "GET",
         url: url,
         headers: { 'X-CSRFToken': '{{ csrf_token }}' },
         success: function(data) {
 
-          $("#dialog-form").html(data).dialog({modal:true}, {title: "New Preparation"}, {resizable: true}, {width: 'auto'}, {draggable: false}).dialog('open');
+          $("#popup").html(data).dialog({modal:true}, {title: "New Preparation"}, {resizable: true}, {width: 'auto'}, {draggable: false}).dialog('open');
         }
       });
       return false;
     }
 
 
-    $("#dialog-form").on('submit', function (e) {
+    $("#popup").on('submit', function (e) {
 
          e.preventDefault();
 
@@ -134,18 +134,18 @@
             success: function(data)
             {
                 if (data.constructor === "test".constructor) {       // checks if the data is a string
-                    $("#dialog-form").html(data);
+                    $("#popup").html(data);
                     $('html, body').animate({
                         scrollTop: $("#preparation_error").offset().top - 100
                     }, 500);
                     return
                 }
 
-                $("#dialog-form").dialog('close');
+                $("#popup").dialog('close');
                 var prepName = data.name;
                 var prepId = data.id;
 
-                $('#inline_preparation').append($('<div class="popup_preparation">')
+                $('#inline_preparation').append($('<div class="preparation">')
                 .append($('<select disabled class="preparation_select">')
                 .append($("<option>").attr("value", prepId)
                 .text(prepName))).append('<a href="#" onclick="deletePreparation(this);return false;">\n<img class="delete" src="{% static 'delete.png' %}" /></a>'));
@@ -161,7 +161,7 @@
     function deletePreparation(element)
     {
         $( element ).parent().css("display", "none");
-        if ($( ".preparation:visible" ).length === 0 && $( ".popup_preparation:visible" ).length === 0 ) {
+        if ($( ".preparation:visible" ).length === 0) {
             $( ".no_preparations" ).show();
         };
     }
