--- a/whats_fresh/whats_fresh_api/templates/base.html
+++ b/whats_fresh/whats_fresh_api/templates/base.html
@@ -2,6 +2,7 @@
 <html>
     <head>
 		{% load site_title %}
+        {% load get_fieldname %}
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>{% site_title %} | {{ title }}</title>
