Theme Model: New field "active"

--- a/whats_fresh/whats_fresh_api/templates/entry.html
+++ b/whats_fresh/whats_fresh_api/templates/entry.html
@@ -1,24 +1,25 @@
 {% extends 'base.html' %}
 
+{% load get_fieldname %}
 {% block content %}
 <div class='entry'>
     <a href='{% url 'list-vendors-edit' %}'>
         <!-- <h4>Vendors</h4> -->
-        <h4>{% theme|get_fieldname:'vendors' %}</h4>
+        <h4>{{ theme|get_fieldname:'vendors' }}</h4>
     </a>
 </div>
 
 <div class='entry'>
     <a href='{% url 'entry-list-products' %}'>
         <!-- <h4>Products</h4> -->
-        <h4>{% theme|get_fieldname:'products' %}</h4>
+        <h4>{{ theme|get_fieldname:'products' }}</h4>
     </a>
 </div>
 
 <div class='entry'>
     <a href='{% url 'entry-list-preparations' %}'>
         <!-- <h4>Product Form and Packaging</h4> -->
-        <h4>{% theme|get_fieldname:'preparations' %}</h4>
+        <h4>{{ theme|get_fieldname:'preparations' }}</h4>
 
     </a>
 </div>
@@ -26,7 +27,7 @@
 <div class='entry'>
     <a href='{% url 'entry-list-stories' %}'>
         <!-- <h4>Product Education</h4> -->
-        <h4>{% theme|get_fieldname:'stories' %}</h4>
+        <h4>{{ theme|get_fieldname:'stories' }}</h4>
 
     </a>
 </div>
@@ -34,7 +35,7 @@
 <div class='entry'>
     <a href='{% url 'entry-list-videos' %}'>
         <!-- <h4>Video Library</h4> -->
-        <h4>{% theme|get_fieldname:'videos' %}</h4>
+        <h4>{{ theme|get_fieldname:'videos' }}</h4>
 
     </a>
 </div>
@@ -43,7 +44,7 @@
 <div class='entry'>
     <a href='{% url 'entry-list-images' %}'>
         <!-- <h4>Image Library</h4> -->
-        <h4>{% theme|get_fieldname:'images' %}</h4>
+        <h4>{{ theme|get_fieldname:'images' }}</h4>
     </a>
 </div>
 
