--- a/whats_fresh/whats_fresh_api/templates/base.html
+++ b/whats_fresh/whats_fresh_api/templates/base.html
@@ -20,7 +20,7 @@
         <div class="header">
             {% block header %}
             {% endblock header%}
-			<h2><a href='/entry'>{{ theme|get_fieldname:'site_title' }}</a></h2>
+			<h2><a href='/entry'>{{ 'site_title'|get_fieldname }}</a></h2>
             {% if user.is_authenticated %}
             <a class='logout' href='/logout'>Logout</a>
             {% endif %}
