--- a/whats_fresh/whats_fresh_api/templates/entry.html
+++ b/whats_fresh/whats_fresh_api/templates/entry.html
@@ -4,33 +4,33 @@
 {% block content %}
 <div class='entry'>
     <a href='{% url 'list-vendors-edit' %}'>
-        <h4>{{ theme|get_fieldname:'vendors' }}</h4>
+        <h4>{{ 'vendors'|get_fieldname }}</h4>
     </a>
 </div>
 
 <div class='entry'>
     <a href='{% url 'entry-list-products' %}'>
-        <h4>{{ theme|get_fieldname:'products' }}</h4>
+        <h4>{{ 'products'|get_fieldname }}</h4>
     </a>
 </div>
 
 <div class='entry'>
     <a href='{% url 'entry-list-preparations' %}'>
-        <h4>{{ theme|get_fieldname:'preparations' }}</h4>
+        <h4>{{ 'preparations'|get_fieldname }}</h4>
 
     </a>
 </div>
 
 <div class='entry'>
     <a href='{% url 'entry-list-stories' %}'>
-        <h4>{{ theme|get_fieldname:'stories' }}</h4>
+        <h4>{{ 'stories'|get_fieldname }}</h4>
 
     </a>
 </div>
 
 <div class='entry'>
     <a href='{% url 'entry-list-videos' %}'>
-        <h4>{{ theme|get_fieldname:'videos' }}</h4>
+        <h4>{{ 'videos'|get_fieldname }}</h4>
 
     </a>
 </div>
@@ -38,7 +38,7 @@
 
 <div class='entry'>
     <a href='{% url 'entry-list-images' %}'>
-        <h4>{{ theme|get_fieldname:'images' }}</h4>
+        <h4>{{ 'images'|get_fieldname }}</h4>
     </a>
 </div>
 
